--- a/style.css
+++ b/style.css
@@ -1,107 +1,160 @@
 body {
-    width: 1920px;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    background-color:#4193a6;
-    flex-wrap: wrap;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding:0;
+  background-color: #4193a6;
+  flex-wrap: wrap;
 }
 
-div { 
-    display: flex;
+/** les 3 éléments ayant le body comme parent **/
+
+header {
+  width: auto;
 }
-
-
-/** Mise en place de l'entête contenant une image faisant office de banière **/
-
-#banniere {
-    border-bottom: black solid 5px;
-    width: 100%;
-}
-
-
-/** Fin de l'entête **/
-
-/** Mise en place de des éléments du CV, composé de deux division principale #perso et #pro à 
-l'intérieur d'un conteneur #main **/
-
-/** Mise en place division perso, Main et #perso en tete de liste, ensuite les ID par ordre alphabétique,
-puis les Class par ordre alphabétique **/
 
 main {
-    width: 100%;
+  width: auto;
 }
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 200px;
+  font-family: 'Libre Baskerville', serif;
+  background-color: #66746e;
+  border-top: black solid 5px;;
+  width: 100%;
+}
+
+/** l'élèment ayant le header comme parent**/
+
+#banniere {
+  border-bottom: black solid 5px;
+  width: 100%;
+}
+
+/** les 2 éléments ayant le main comme parent **/
 
 #perso {
-    flex-direction: column;
-    width: 35%;
-    background-color: rgb(199, 227, 240);
-    padding: 5%;
-    margin: 5%;
-    border: black solid 5px;
-    border-radius: 50px;
-    box-shadow: 10px 5px 5px black;
-    justify-content: center; /* Alignement horizontal au centre */
-    align-items: center; /* Alignement vertical au centre */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 35%;
+  background-color: rgb(199, 227, 240);
+  padding: 5%;
+  margin: 2%;
+  border: black solid 5px;
+  border-radius: 50px;
+  box-shadow: 10px 5px 5px black;
 }
 
-a {
-    justify-content: center;
-    margin-right: 5%;
-    margin-left: 5%;
+#pro {
+  display: flex;
+  flex-direction: column;
+  width: 65%;
+  background-color: rgb(199, 227, 240);
+  padding:5%;
+  margin:2%;
+  border: black solid 5px;
+  border-radius: 50px;
+  box-shadow: 10px 5px 5px black;
 }
 
-#contact {
-    justify-content: space-evenly;
-}
-#drapeaux {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    flex-wrap: wrap;
+/** les éléments contenus dans #perso utilisés **/
+
+#me {
+  border: black solid 5px;
+  border-radius: 50%;
+  box-shadow: 10px 5px 5px gray;
+  margin-bottom: 25%;
+  width: 100%;
+  object-fit: cover;
 }
 
 h2 {
-    display: flex;
-    font-family: 'Libre Baskerville', serif;
-    justify-content: center;
-    margin-top: 30%;
-    margin-bottom: 30%;
-    font-size: 230%;
-    color: #4193a6;
-    text-shadow: 1px 1px 1px gray;
-}
-
-i {
-    box-shadow: 10px 5px 5px black;
-}
-
-#interet {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    flex-wrap: wrap;
-}
-
-#me {
-    border: black solid 5px;
-    border-radius: 50%;
-    box-shadow: 10px 5px 5px gray;
-    width: 100%;
+  display: flex;
+  font-family: 'Libre Baskerville', serif;
+  font-size: 1.5vw;
+  color: #4193a6;
+  width: 100%;
+  justify-content: center;
 }
 
 p {
-    display: flex;
-    font-family: 'Libre Baskerville', serif;
-    font-size: 140%;
-    padding-right: 20%;
-    padding-left: 20%;
-    color: #4193a6;
-    text-shadow: 1px 1px 1px gray;
+  font-family: 'Libre Baskerville', serif;
+  font-size: 1vw;
+  width: 100%;
 }
 
-/** fin des ID **/
-/** début des Class **/
+i {
+  justify-content: space-evenly;
+  font-size: 350%;
+}
+
+#icone {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+#interet {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#passion {
+  margin-top: 10%;
+}
+
+#drapeaux {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 5%;
+  margin-bottom: 10%;
+}
+
+/** les éléments contenus dans #pro utilisés **/
+
+h3 {
+  font-family: 'Libre Baskerville', serif;
+  font-size: 2vw;
+  color: #e9cf9b;
+  text-align: center;
+}
+
+#hardskills {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+
+h4 {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Libre Baskerville', serif;
+  font-size: 1.8vw;
+  color: #e9cf9b;
+  text-align: center;
+}
+
+h5 {
+  font-family: 'Libre Baskerville', serif;
+  font-size: 1.3vw;
+  color: #e9cf9b;
+}
+
+#softskills {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+}
 
 .column {
     display: flex;
@@ -112,8 +165,7 @@ p {
     display: flex;
     border: black solid 3px;
     border-radius: 50%;
-    width: 40%;
-    margin-bottom: 20%;
+    width: 20%;
     box-shadow: 10px 5px 5px gray;
 }
 
@@ -131,64 +183,7 @@ p {
     box-shadow: 10px 5px 5px gray;   
 }
 
-/** fin de la mise en place de la div #Perso **/
-
-/** mise en place de la div pro, #perso en tete de liste, ensuite les ID par ordre alphabétique,
-puis les Class par ordre alphabétique **/
-
-/** début des ID **/
-
-#pro {
-    flex-direction: column;
-    width: 65%;
-    background-color: rgb(199, 227, 240);
-    padding:5%;
-    margin:5%;
-    border: black solid 5px;
-    border-radius: 50px;
-    box-shadow: 10px 5px 5px black;
-}
-
-h3 {
-    display: flex;
-    font-family: 'Libre Baskerville', serif;
-    justify-content: center;
-    margin-bottom: 5%;
-    font-size: 220%;
-    color: #e9cf9b;
-    text-shadow: 1px 1px 1px gray;
-}
-
-h4 {
-    display: flex;
-    flex-direction: column;
-    font-family: 'Libre Baskerville', serif;
-    justify-content: center;
-    margin-bottom: 3%;
-    margin-top: 3%;
-    font-size: 150%;
-    color: #e9cf9b;
-    text-shadow: 1px 1px 1px #e9cf9b;
-}
-
-#hardskills {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-}
-
-#softskills {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 50%;
-}
-
-/** fin des ID **/
-/** début des Class **/
-
 .boite {
-    flex-direction: column;
     width: 80%;
     background-color: #66746e;
     padding-bottom: 5%;
@@ -197,274 +192,153 @@ h4 {
     border: black solid 5px;
     border-radius: 50px;
     box-shadow: 10px 5px 5px gray;
+    margin-top: 5%;
 }
     
 .blanc {
     color: #fffdfd;
-    font-size: 90%;
-    text-shadow: 1px 1px 1px #fffdfd;
-    flex-wrap: wrap;
-    padding: 0%;
-}
-
-.fontsizebooking {
-    font-size: 56%;
-}
-
-.marginbottom {
-    margin-bottom: 10%;
-}
-
-.margintopbottom {
-    margin-top: 50%;
-    margin-bottom: 50%;
-}
-
-.margintop {
-    margin-top: 40%;
-}
-/** Fin des Class **/
-
-/** Mise en place de la div pro **/
-
-/** Mise en place d'un footer contenant un compteur de visite **/
-
-footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 200px;
-    font-family: 'Libre Baskerville', serif;
-    background-color: #66746e;
-    border-top: black solid 5px;;
-    width: 100%;
 }
 
 .fontsizecompteur {
     font-size: 200%;
 }
 
+.fa-2xl {
+  font-size: 3em;
+  line-height: .03125em;
+  vertical-align: -0.1875em;
+  margin-top: 50%;
+}
 
-/** Media querries **/
+:any-link {
+  text-transform: none;
+  text-decoration: none;
+}
 
-@media only screen and (min-width: 1200px) {
-    /* Styles pour les écrans larges */
-body {
+
+@media only screen and (max-width: 1024px) {
+  
+  body {
     width: 100%;
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
     margin: 0;
-    background-color: #4193a6;
-    flex-wrap: wrap;
-  }
-  
-  div {
-    display: flex;
-  }
-  
-  #banniere {
-    border-bottom: black solid 5px;
-    width: 100%;
-  }
-  
-  main {
-    width: 100%;
-  }
-  
-  #perso {
-    flex-direction: column;
-    width: 35%;
-    background-color: rgb(199, 227, 240);
-    padding: 5%;
-    margin: 5%;
-    border: black solid 5px;
-    border-radius: 50px;
-    box-shadow: 10px 5px 5px black;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  a {
-    justify-content: center;
-    margin-right: 5%;
-    margin-left: 5%;
-  }
-  
-  #contact {
-    justify-content: space-evenly;
-  }
-  
-  #drapeaux {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    flex-wrap: wrap;
-  }
-  
-  h2 {
-    display: flex;
-    font-family: 'Libre Baskerville', serif;
-    justify-content: center;
-    margin-top: 30%;
-    margin-bottom: 30%;
-    font-size: 230%;
-    color: #4193a6;
-    text-shadow: 1px 1px 1px gray;
-  }
-  
-  i {
-    box-shadow: 10px 5px 5px black;
-  }
-  
-  #interet {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    flex-wrap: wrap;
-  }
-  
-  #me {
-    border: black solid 5px;
-    border-radius: 50%;
-    box-shadow: 10px 5px 5px gray;
-    width: 100%;
-  }
-  
-  p {
-    display: flex;
-    font-family: 'Libre Baskerville', serif;
-    font-size: 140%;
-    padding-right: 20%;
-    padding-left: 20%;
-    color: #4193a6;
-    text-shadow: 1px 1px 1px gray;
-  }
-  
-  .column {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .pays {
-    display: flex;
-    border: black solid 3px;
-    border-radius: 50%;
-    width: 40%;
-    margin-bottom: 20%;
-    box-shadow: 10px 5px 5px gray;
-  }
-  
-  .row {
-    display: flex;
-    flex-direction: row;
-  }
-  
-  .hobby {
-    display: flex;
-    border: black solid 5px;
-    border-radius: 50%;
-    width: 70%;
-    margin-bottom: 20%;
-    box-shadow: 10px 5px 5px gray;
-  }
-  
-  #pro {
-    flex-direction: column;
-    width: 65%;
-    background-color: rgb(199, 227, 240);
-    padding: 5%;
-    margin: 5%;
-    border: black solid 5px;
-    border-radius: 50px;
-    box-shadow: 10px 5px 5px black;
-  }
-  
-  h3 {
-    display: flex;
-    font-family: 'Libre Baskerville', serif;
-    justify-content: center;
-    margin-bottom: 5%;
-    font-size: 220%;
-    color: #e9cf9b;
-    text-shadow: 1px 1px 1px gray;
+    background-color:#4193a6;
   }
 
-  h4 {
-    display: flex;
-    flex-direction: column;
-    font-family: 'Libre Baskerville', serif;
-    justify-content: center;
-    margin-bottom: 3%;
-    margin-top: 3%;
-    font-size: 150%;
-    color: #e9cf9b;
-    text-shadow: 1px 1px 1px #e9cf9b;
+  header, main, footer {
+    width: 150%;
+  }
+
+  #competence {
+    margin-top: 1%;
+  }
+
+  #formations {
+    margin-top: 15%;
+    margin-bottom: 15%;
   }
 
   #hardskills {
     display: flex;
     flex-direction: column;
-    width: 50%;
   }
 
   #softskills {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
   }
 
-  .boite {
-    flex-direction: column;
-    width: 80%;
-    background-color: #66746e;
-    padding-bottom: 5%;
-    padding-right: 10%;
-    padding-left: 10%;
-    border: black solid 5px;
-    border-radius: 50px;
-    box-shadow: 10px 5px 5px gray;
+  h2 {
+    display: flex;
+    font-family: 'Libre Baskerville', serif;
+    text-align: center;
+    margin-top: 30%;
+    margin-bottom: 30%;
+    font-size: 230%;
+    color: #4193a6;
+    text-shadow: 1px 1px 1px gray;
   }
+
+  h3 {
+    display: flex;
+    font-family: 'Libre Baskerville', serif;
+    color: #e9cf9b;
+    margin-bottom: 1%;
+    padding: 0;
+    font-size: 6vw;
+    justify-content: center;
+    text-shadow: 4px 3px 1px black;
+  }
+
+  h4 {
+    display: flex;
+    flex-direction: column;
+    font-family: 'Libre Baskerville', serif;
+    color: #e9cf9b;
+    text-shadow: 4px 3px 1px black;
+    padding: 0;
+    font-size: 5vw;
+    width: 100%;
+    text-align: center;
+  }
+
+  h5{
+    font-size: 5vm;
+  }
+
+  p {
+    display: flex;
+    font-family: 'Libre Baskerville', serif;
+  }
+
+  #perso, #pro {
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    background-color: rgb(199, 227, 240);
+    border: black solid 3px;
+    border-radius: 50px;
+    box-shadow: 10px 5px 5px black;
+  }
+
+  
 
   .blanc {
     color: #fffdfd;
-    font-size: 90%;
-    text-shadow: 1px 1px 1px #fffdfd;
-    flex-wrap: wrap;
-    padding: 0%;
-  }
-
-  .fontsizebooking {
-    font-size: 56%;
-  }
-
-  .marginbottom {
-    margin-bottom: 10%;
-  }
-
-  .margintopbottom {
-    margin-top: 50%;
-    margin-bottom: 50%;
-  }
-
-  .margintop {
-    margin-top: 40%;
-  }
-
-    footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 200px;
-    font-family: 'Libre Baskerville', serif;
-    background-color: #66746e;
-    border-top: black solid 5px;
+    font-size: 3vw;
+    text-shadow: 4px 3px 1px black;
+    padding: 0;
+    text-align: center;
     width: 100%;
-  }
+    justify-content: center;
+}
 
-  .fontsizecompteur {
-    font-size: 200%;
-  }
+
+
+.boite {
+  background-color: #66746e;
+  border: black solid 3px;
+  border-radius: 50px;
+  box-shadow: 10px 3px 5px gray;
+  margin: 0;
+  padding: 1%;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 90%;
+}
+
+.row {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+}
+
 }
